fix test settings

--- a/autocomplete/Extensions/Chrome/popup.html
+++ b/autocomplete/Extensions/Chrome/popup.html
@@ -3,7 +3,7 @@
     <head>
       <meta charset="utf-8">
         <title>Автозаполнение</title>
-        <script src="popup3.js"></script>
+        <script src="popup.js"></script>
         <link rel="stylesheet" hrref="popup.css">
     </head>
     <body>
