work autocomplete string and check, but fix bug auto date (in firefox work, chrome doesn't)

--- a/autocomplete/Extensions/Chrome/popup.html
+++ b/autocomplete/Extensions/Chrome/popup.html
@@ -4,6 +4,7 @@
       <meta charset="utf-8">
         <title>Автозаполнение</title>
         <script src="popup.js"></script>
+        <script src="jquery.js"></script>
         <link rel="stylesheet" hrref="popup.css">
     </head>
     <body>
