--- a/autocomplete/Extensions/Chrome/popup.html
+++ b/autocomplete/Extensions/Chrome/popup.html
@@ -3,12 +3,116 @@
     <head>
       <meta charset="utf-8">
         <title>Автозаполнение</title>
+        <link rel="stylesheet" hrref="popup.css">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+        <link rel="stylesheet" href="material.min.css">
+        <script defer src="material.min.js"></script>
         <script src="popup.js"></script>
         <script src="jquery.js"></script>
-        <link rel="stylesheet" hrref="popup.css">
     </head>
     <body>
-        <h1>Приступим?</h1>
-        <button id="go">Поехали!</button>
+      <style>
+        .demo-card-square.mdl-card {
+          width: 350px;
+          min-height: 320px;
+        }
+        .demo-card-square > .mdl-card__title {
+          height: 150px;
+          background-image: url('1.png');
+          background-size: 100% auto;
+          background-repeat: no-repeat;
+        }
+        h3, label {
+          margin-bottom: 20px!important;
+        }
+        label {
+          margin-left: 25px!important;
+        }
+        .mdl-card__supporting-text {
+          max-height: 350px;
+          overflow-y: auto;
+        }
+      </style>
+
+      <div class="demo-card-square mdl-card mdl-shadow--2dp">
+        <div class="mdl-card__title mdl-card--expand"></div>
+
+        <div class="mdl-card__supporting-text">
+
+          <div>
+            <h3 class="mdl-card__title-text">Типы полей</h3>
+
+            <label class="mdl-switch mdl-js-switch mdl-js-ripple-effect" for="type-1">
+              <input type="checkbox" id="type-1" class="mdl-switch__input" checked>
+              <span class="mdl-switch__label">Строки</span>
+            </label>
+
+            <label class="mdl-switch mdl-js-switch mdl-js-ripple-effect" for="type-2">
+              <input type="checkbox" id="type-2" class="mdl-switch__input" checked>
+              <span class="mdl-switch__label">Текстовые поля</span>
+            </label>
+
+            <label class="mdl-switch mdl-js-switch mdl-js-ripple-effect" for="type-3">
+              <input type="checkbox" id="type-3" class="mdl-switch__input" disabled>
+              <span class="mdl-switch__label">Дата</span>
+            </label>
+
+            <label class="mdl-switch mdl-js-switch mdl-js-ripple-effect" for="type-4">
+              <input type="checkbox" id="type-4" class="mdl-switch__input" checked>
+              <span class="mdl-switch__label">Чекбокс</span>
+            </label>
+
+            <label class="mdl-switch mdl-js-switch mdl-js-ripple-effect" for="type-5">
+              <input type="checkbox" id="type-5" class="mdl-switch__input" checked>
+              <span class="mdl-switch__label">Группа чекбоксов</span>
+            </label>
+
+            <label class="mdl-switch mdl-js-switch mdl-js-ripple-effect" for="type-6">
+              <input type="checkbox" id="type-6" class="mdl-switch__input" checked>
+              <span class="mdl-switch__label">Выпадающий список</span>
+            </label>
+
+            <label class="mdl-switch mdl-js-switch mdl-js-ripple-effect" for="type-7">
+              <input type="checkbox" id="type-7" class="mdl-switch__input" checked>
+              <span class="mdl-switch__label">Радиокнопки</span>
+            </label>
+
+            <label class="mdl-switch mdl-js-switch mdl-js-ripple-effect" for="type-8">
+              <input type="checkbox" id="type-8" class="mdl-switch__input" checked>
+              <span class="mdl-switch__label">Адресные поля</span>
+            </label>
+
+            <label class="mdl-switch mdl-js-switch mdl-js-ripple-effect" for="type-9">
+              <input type="checkbox" id="type-9" class="mdl-switch__input" disabled>
+              <span class="mdl-switch__label">Таблицы</span>
+            </label>
+          </div>
+
+          <div>
+            <h3 class="mdl-card__title-text">Условия</h3>
+
+            <label class="mdl-switch mdl-js-switch mdl-js-ripple-effect" for="action-1">
+              <input type="checkbox" id="action-1" class="mdl-switch__input" checked>
+              <span class="mdl-switch__label">Необязательные поля</span>
+            </label>
+
+            <label class="mdl-switch mdl-js-switch mdl-js-ripple-effect" for="action-2">
+              <input type="checkbox" id="action-2" class="mdl-switch__input" disabled>
+              <span class="mdl-switch__label">Стандартные маски</span>
+            </label>
+
+            <label class="mdl-switch mdl-js-switch mdl-js-ripple-effect" for="action-3">
+              <input type="checkbox" id="action-3" class="mdl-switch__input" disabled>
+              <span class="mdl-switch__label">Регулярные выражения</span>
+            </label>
+          </div>
+        </div>
+
+        <div class="mdl-card__actions mdl-card--border">
+          <a id="go" class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect">
+            Поехали!
+          </a>
+        </div>
+      </div>
     </body>
 </html>
